Update timeline style for line chart

--- a/src/ng2d3.scss
+++ b/src/ng2d3.scss
@@ -24,6 +24,12 @@
     }
   }
 
+  .tick {
+    text {
+      font-size: 12;
+    }
+  }
+
   g {
     &:focus {
       outline: none;
@@ -143,6 +149,12 @@
 
   .embedded-chart {
     opacity: 0.6;
+  }
+
+  .tick {
+    text {
+      font-size: 11px;
+    }
   }
 }
 
