--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -17,7 +17,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
       </ngx-charts-bar-vertical>
@@ -37,7 +37,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)">
       </ngx-charts-bar-horizontal>
@@ -58,6 +58,8 @@
         [yAxisLabel]="yAxisLabel"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showGridLines]="showGridLines"
+        [barPadding]="barPadding"
+        [groupPadding]="groupPadding"
         (select)="select($event)">
       </ngx-charts-bar-vertical-2d>
       <ngx-charts-bar-horizontal-2d
@@ -77,6 +79,8 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
+        [barPadding]="barPadding"
+        [groupPadding]="groupPadding"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-2d>
       <ngx-charts-bar-vertical-stacked
@@ -96,7 +100,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (select)="select($event)">
       </ngx-charts-bar-vertical-stacked>
       <ngx-charts-bar-horizontal-stacked
@@ -116,8 +120,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-stacked>
       <ngx-charts-bar-vertical-normalized
@@ -137,7 +140,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (select)="select($event)">
       </ngx-charts-bar-vertical-normalized>
       <ngx-charts-bar-horizontal-normalized
@@ -157,7 +160,7 @@
         [yAxisLabel]="yAxisLabel"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showGridLines]="showGridLines"
-        [innerPadding]="innerPadding"
+        [barPadding]="barPadding"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-normalized>
       <ngx-charts-pie-chart
@@ -584,6 +587,16 @@
       <div *ngIf="chart.options.includes('innerPadding')">
         <label>Inner padding value:</label><br />
         <input type="number" [(ngModel)]="innerPadding" min="0" step="1"><br />
+      </div>
+
+      <div *ngIf="chart.options.includes('barPadding')">
+        <label>Padding between bars:</label><br />
+        <input type="number" [(ngModel)]="barPadding" min="0" step="1"><br />
+      </div>
+
+      <div *ngIf="chart.options.includes('groupPadding')">
+        <label>Padding between groups:</label><br />
+        <input type="number" [(ngModel)]="groupPadding" min="0" step="1"><br />
       </div>
 
       <div *ngIf="chart.options.includes('value')">
