--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -242,6 +242,7 @@
         [showYAxisLabel]="showYAxisLabel"
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
+        [autoScale]="autoScale"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [roundDomains]="roundDomains">
