--- a/app.css
+++ b/app.css
@@ -38,6 +38,8 @@
   .ngx-charts .label {
     font-size: 12px;
     font-weight: normal; }
+  .ngx-charts .tooltip-anchor {
+    fill: black; }
   .ngx-charts .gridline-path {
     stroke: #ddd;
     stroke-width: 1;
