--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -18,6 +18,7 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
@@ -39,6 +40,7 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)">
@@ -61,7 +63,9 @@
         (legendLabelClick)="onLegendLabelClick($event)"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [groupPadding]="groupPadding"
+        [groupProportion]="groupProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-vertical-2d>
@@ -83,7 +87,9 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [groupPadding]="groupPadding"
+        [groupProportion]="groupProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-2d>
@@ -105,6 +111,7 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-vertical-stacked>
@@ -126,6 +133,7 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-stacked>
@@ -147,6 +155,7 @@
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-vertical-normalized>
@@ -168,6 +177,7 @@
         (legendLabelClick)="onLegendLabelClick($event)"
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
+        [paddingProportion]="paddingProportion"
         [roundDomains]="roundDomains"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-normalized>
@@ -632,9 +642,18 @@
         <input type="number" [(ngModel)]="barPadding" min="0" step="1"><br />
       </div>
 
+      <div *ngIf="chart.options.includes('paddingProportion')">
+        <label>Proportion of padding to bar width:</label><br />
+        <input type="number" [(ngModel)]="paddingProportion" min="0" step="0.1"><br />
+      </div>
+
       <div *ngIf="chart.options.includes('groupPadding')">
         <label>Padding between groups:</label><br />
         <input type="number" [(ngModel)]="groupPadding" min="0" step="1"><br />
+      </div>
+      <div *ngIf="chart.options.includes('groupProportion')">
+        <label>Proportion of padding to individual group:</label><br />
+        <input type="number" [(ngModel)]="groupProportion" min="0" step="1"><br />
       </div>
 
       <div *ngIf="chart.options.includes('value')">
