Fix legend positions

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -569,7 +569,7 @@
           <option value="right">Right</option>
           <option value="left">Left</option>
           <option value="top">Top</option>
-          <option value="top">bottom</option>
+          <option value="bottom">Bottom</option>
         </select>
       </div>
       <div *ngIf="chart.options.includes('showXAxisLabel')">
