--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -400,6 +400,7 @@
         [smallSegments]="gaugeSmallSegments"
         [margin]="margin ? [marginTop, marginRight, marginBottom, marginLeft] : null"
         [tooltipDisabled]="tooltipDisabled"
+        [showText]="showText"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
       </ngx-charts-gauge>
@@ -578,6 +579,12 @@
         <label>
           <input type="checkbox" [checked]="tooltipDisabled" (change)="tooltipDisabled = $event.target.checked">
           Disable tooltip
+        </label> <br />
+      </div>
+      <div *ngIf="chart.options.includes('showText')">
+        <label>
+          <input type="checkbox" [checked]="showText" (change)="showText = $event.target.checked">
+          Show Text
         </label> <br />
       </div>
       <div *ngIf="chart.options.includes('xAxisLabel')">
