--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -22,6 +22,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [tooltipText]="verticalBarTooltipsText"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
       </ngx-charts-bar-vertical>
