custom tooltips for bar, line and area charts

--- a/demo/index.ejs
+++ b/demo/index.ejs
@@ -59,6 +59,9 @@
       .social-toolbox .addthis_inline_share_toolbox {
         margin-top: 5px;
       }
+      .tresh {
+        color: red;
+      }
     </style>
   </head>
 <body>
