--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -263,6 +263,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="lineTooltipText"
         [tooltipTemplate]="allToolTips"
+        [customSeriesTooltip]="customSeriesTooltip"
         [showSeriesOnHover]="showSeriesOnHover"
         (select)="select($event)">
       </ngx-charts-line-chart>
@@ -326,6 +327,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="lineTooltipText"
         [tooltipTemplate]="allToolTips"
+        [customSeriesTooltip]="customSeriesTooltip"
         (select)="select($event)">
       </ngx-charts-area-chart>
       <ngx-charts-area-chart-stacked
