change grouped bar charts to use series method in demo app.component.html

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -97,7 +97,7 @@
         [barPadding]="barPadding"
         [groupPadding]="groupPadding"
         [roundDomains]="roundDomains"
-        [tooltipText]="barTooltipText"
+        [tooltipText]="barSeriesTooltipText"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-2d>
       <ngx-charts-bar-vertical-stacked
