feature(tree-map): add value and label formmating

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -410,6 +410,8 @@
         [scheme]="colorScheme"
         [results]="single"
         [tooltipDisabled]="tooltipDisabled"
+        [labelFormatting]="gdpLabelFormatting"
+        [valueFormatting]="currencyFormatting"
         (select)="select($event)">
       </ngx-charts-tree-map>
       <ngx-charts-number-card
