fix(polar-chart): Add margin for labels, better gradiants

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -266,6 +266,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         (legendLabelClick)="onLegendLabelClick($event)"
+        [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [showXAxisLabel]="showXAxisLabel"
