demo(polar-chart): <3 equation and gradiant option

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -561,6 +561,7 @@
           [legend]="false"
           [legendTitle]="legendTitle"
           (legendLabelClick)="onLegendLabelClick($event)"
+          [gradient]="gradient"
           [xAxis]="false"
           [yAxis]="true"
           [showXAxisLabel]="false"
