--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 .ngx-charts {
-  float: left; }
+  float: left;
+  overflow: visible; }
   .ngx-charts .circle,
   .ngx-charts .bar,
   .ngx-charts .arc {
@@ -12,7 +13,6 @@
   .ngx-charts .card.active,
   .ngx-charts .card:hover {
     opacity: 0.8;
-    -webkit-transition: opacity 100ms ease-in-out;
     transition: opacity 100ms ease-in-out; }
   .ngx-charts .bar:focus,
   .ngx-charts .cell:focus,
@@ -23,8 +23,9 @@
     outline: none; }
   .ngx-charts .line-series.inactive,
   .ngx-charts .line-series-range.inactive,
+  .ngx-charts .polar-series-path.inactive,
+  .ngx-charts .polar-series-area.inactive,
   .ngx-charts .area-series.inactive {
-    -webkit-transition: opacity 100ms ease-in-out;
     transition: opacity 100ms ease-in-out;
     opacity: .2; }
   .ngx-charts .line-highlight {
@@ -44,6 +45,12 @@
     stroke: #ddd;
     stroke-width: 1;
     fill: none; }
+  .ngx-charts .gridline-path-dotted {
+    stroke: #ddd;
+    stroke-width: 1;
+    fill: none;
+    stroke-dasharray: 1, 20;
+    stroke-dashoffset: 3; }
   .ngx-charts .grid-panel rect {
     fill: none; }
   .ngx-charts .grid-panel.odd rect {
