shadow added for vertical bar chart

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -10,6 +10,9 @@
         [customColors]="customColors"
         [results]="single"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 2, 2, 2]"
+        [shadowColor]="shadowColor"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [legend]="showLegend"
