shadows for horizontal bar chart

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -36,6 +36,9 @@
         [schemeType]="schemeType"
         [results]="single"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [legend]="showLegend"
