--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -62,6 +62,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [legend]="showLegend"
@@ -86,6 +89,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -110,6 +116,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -133,6 +142,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -156,6 +168,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -179,6 +194,9 @@
         [schemeType]="schemeType"
         [results]="multi"
         [gradient]="gradient"
+        [shadow]="true"
+        [shadowDepth]="['120%', 1, 1, 1]"
+        [shadowColor]="shadowColor"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
